hard-gists/4171521/run.log
=== Docker Run Log for 4171521 ===
Started at: Mi 29. Okt 14:23:39 CET 2025

[2025-10-29 14:23:39] START: Running container for 4171521
[2025-10-29 14:23:39] SUCCESS: Container 85faaa2c0842b248ffc89a915afeef602bfb55b0fb825a69ff4877a277836e6e started for 4171521
=== Container logs for 4171521 ===
  File "/snippet.py", line 3
    print """<html>
    ^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 4171521 ===
[2025-10-29 14:23:41] INFO: Container 85faaa2c0842b248ffc89a915afeef602bfb55b0fb825a69ff4877a277836e6e has stopped
